--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                 <div class="history__text">
                     <h3 class="history__title">How we got started</h3>
                     <p class="history__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste vitae veritatis corrupti, repudiandae mollitia aliquam perferendis magnam ad magni aliquid ut quidem facere? Provident atque quaerat ipsam ab, nobis impedit.
-                       <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ea cupiditate quos molestiae! Iste inventore expedita eaque dolorum nostrum sapiente amet eos molestias error itaque placeat cum, animi dignissimos voluptas?</br>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ea cupiditate quos molestiae! Iste inventore expedita eaque dolorum nostrum sapiente amet eos molestias error itaque placeat cum, animi dignissimos voluptas?
                             ipsum dolor sit amet consectetur adipisicing elit. Quasi, libero itaque quam enim possimus culpa, molestias ullam fuga adipisci, nobis dolorem quod pariatur voluptas rem odit corrupti explicabo reiciendis incidunt.
-                            <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam obcaecati voluptates architecto similique? Illo debitis animi accusantium neque? Illo ea tenetur aspernatur sint eaque. Sequi nesciunt omnis ad atque voluptates.</br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam obcaecati voluptates architecto similique? Illo debitis animi accusantium neque? Illo ea tenetur aspernatur sint eaque. Sequi nesciunt omnis ad atque voluptates.
                     </p>
                     <a href="" class="history__btn">Read More</a>
                 </div>
